--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -4,7 +4,7 @@ tasks:
   - name: Run neo4j container
     init: docker run -d --name neo4j -p 7474:7474 -p 7687:7687 neo4j
   - name: Run groovy script container
-    init: docker run -d --name groovy -p 8080:8080 -v "$PWD":/home/groovy/scripts -w /home/groovy/scripts groovy groovy <script> <script-args>
+    init: docker run -d --name groovy -p 8080:8080 -v "$PWD":/home/groovy/scripts -w /home/groovy/scripts groovy groovy neo4j-query.groovy
 
 ports:
   - port: 7474
