--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -2,7 +2,7 @@ image: gitpod/workspace-full
 
 tasks:
   - name: Run neo4j container
-    init: docker run -d --name neo4j -p 7474:7474 -p 7687:7687 neo4j
+    init: docker run --publish=7474:7474 --publish=7687:7687 neo4j:5.6.0-community
   - name: Run groovy script container
     init: docker run -d --name groovy -p 4567:4567 -v "$PWD":/home/groovy/scripts -w /home/groovy/scripts groovy groovy neo4j-query.groovy
 
@@ -16,4 +16,3 @@ ports:
   - port: 4567
     onOpen: open-preview
     name: Groovy Script
-
