--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -3,13 +3,12 @@ image: gitpod/workspace-full
 tasks:
   - name: Run neo4j container
     init: |          
-          docker run --rm \
-           --volume /path/to/local/examples:/examples \
+          docker run -d --name neo4j \
            --publish=7474:7474 \
            --publish=7687:7687 \
            --env NEO4J_AUTH=neo4j/Harsh@123 \
            neo4j:5.6.0-community
-          docker exec --interactive --tty  cypher-shell -u neo4j -p 
+          docker exec --interactive --tty  cypher-shell -u neo4j -p Harsh@123
           neo4j@neo4j> :source init-script.cypher
   - name: Run groovy script container
     init: docker run -d --name groovy -p 4567:4567 -v "$PWD":/home/groovy/scripts -w /home/groovy/scripts groovy groovy neo4j-query.groovy
