--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -8,7 +8,7 @@ tasks:
        --publish=7687:7687 \
        --env NEO4J_AUTH=neo4j/Harsh@123 \
        neo4j:5.6.0-community
-      docker exec --interactive --tty neo4j /bin/bash > echo "Inside neo4j container"
+      docker exec -it neo4j bash
       cypher-shell -u neo4j -p Harsh@123
       source init-script.cypher
   - name: Run groovy script container
