--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -7,7 +7,7 @@ tasks:
        --publish=7474:7474 \
        --publish=7687:7687 \
        --env NEO4J_AUTH=neo4j/Harsh@123 \
-       -v "$PWD":/home/groovy/scripts -w /home/groovy/scripts
+       -v "$PWD":/home/groovy/scripts -w /home/groovy/scripts \
        neo4j:5.6.0-community &&
       docker exec -it neo4j bash &&
       cypher-shell -u neo4j -p Harsh@123 |
