--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -10,8 +10,8 @@ tasks:
        -v "$PWD":/home/groovy/scripts -w /home/groovy/scripts \
        neo4j:5.6.0-community &&
       docker exec -it neo4j bash &&
-      cypher-shell -u neo4j -p Harsh@123 |
-      source init-script.cypher
+      cypher-shell -u neo4j -p Harsh@123;
+      :source init-script.cypher
   - name: Run groovy script container
     init: docker run -d --name groovy -p 4567:4567 -v "$PWD":/home/groovy/scripts -w /home/groovy/scripts groovy groovy neo4j-query.groovy
 
