--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -8,8 +8,7 @@ tasks:
        --publish=7687:7687 \
        --env NEO4J_AUTH=neo4j/Harsh@123 \
        -v "$PWD":/home/groovy/scripts -w /home/groovy/scripts \
-       neo4j:5.6.0-community &&
-      docker exec -it neo4j bash &&
+       neo4j:5.6.0-community
       cypher-shell -u neo4j -p Harsh@123;
       :source init-script.cypher
   - name: Run groovy script container
