--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -10,7 +10,7 @@ tasks:
        -v "$PWD":/home/groovy/scripts -w /home/groovy/scripts \
        neo4j:5.6.0-community
   - name: Run groovy script container
-    init: docker run -d --name groovy -p 4567:4567 -v "$PWD":/home/groovy/scripts -w /home/groovy/scripts groovy groovy neo4j-query.groovy
+    init: docker run -d --user groovy --name groovy -p 4567:4567 -v "$PWD":/home/groovy/scripts -w /home/groovy/scripts groovy groovy neo4j-query.groovy
 
 ports:
   - port: 7474
