--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -9,8 +9,9 @@ tasks:
        --env NEO4J_AUTH=neo4j/Harsh@123 \
        -v "$PWD":/home/groovy/scripts -w /home/groovy/scripts \
        neo4j:5.6.0-community
-  - name: Run groovy script container
-    init: docker run -d --user groovy --name groovy -p 4567:4567 -v "$PWD":/home/groovy/scripts -w /home/groovy/scripts groovy groovy neo4j-query.groovy
+  - name: Run groovy script containerv
+    init: curl -s get.sdkman.io | bash
+      command: sdk install groovy && groovy neo4j-query.groovy
 
 ports:
   - port: 7474
